# crypto-projects

./: .gitignore  .pre-commit-config.yaml  README.md
account_manager/: .env.example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
account_manager/account_manager/: asgi.py  docs.py  urls.py  wsgi.py
account_manager/account_manager/settings/: base.py  development.py  production.py
account_manager/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
account_manager/accounts/migrations/: 0001_add_user_model.py  0002_add_credential_model.py  0002_add_project_models.py  0003_add_project_model.py  0004_add_reminder_model.py
account_manager/authorization/: urls.py
account_manager/project/: admin.py  models.py  serializers.py  urls.py  views.py
account_manager/project/migrations/: 0001_add_project_models.py
account_manager/project/tests/: conftest.py  test_credential_viewset.py  test_project_viewset.py  test_task_viewset.py
account_manager/tests/: conftest.py
account_manager/user/: models.py  serializers.py  tests.py  urls.py  views.py
account_manager/user/migrations/: 0001_add_user_model.py
account_manager/user/tests/: conftest.py  test_user_viewset.py
