[tool.poetry]
name = "crypto-acc-manager"
version = "0.1.0"
description = ""
authors = ["usik-sviatoslav <usik.sviatoslav.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.5.2"
django = "^5.0.6"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
cryptography = "^42.0.7"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.1.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
flake8-variables-names = "^0.0.6"
flake8-functions = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
exclude = [".env", ".git", "poetry.lock", ".pytest_cache", "__pycache__", "venv"]
max-complexity = 8
ignore = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "account_manager.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
branch = true
data_file = "htmlcov/.coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
